Obtención de los géneros de Mongo
Ahora las preferencias almacenan el id del género en MongoDB y se hacen peticiones al microservicio de contenidos para obtener los géneros.
También se han corregido algunos errores en perfil_controller.
